--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/react": "^1.2.12",
+    "@prisma/client": "^6.10.1",
     "ai": "^4.3.16",
     "es-toolkit": "^1.39.3",
     "next": "15.3.4",
@@ -28,7 +29,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "prettier": "3.5.3",
+    "prisma": "^6.10.1",
     "tailwindcss": "^4",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
