--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.10.1",
     "ai": "^4.3.16",
     "es-toolkit": "^1.39.3",
+    "nanoid": "^5.1.5",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
